--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-mocha-test": "~0.4.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.1",
-    "grunt-contrib-watch": "~0.4.3"
+    "grunt-contrib-watch": "~0.4.3",
+    "should": "~1.2.2"
   }
 }
