--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "licenses": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-mocha-test": "~0.4.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.1",
-    "grunt-contrib-watch": "~0.4.3",
-    "should": "~1.2.2"
+    "grunt": "~0.4.4",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-mocha-test": "^0.10.2",
+    "lodash": "~2.4.1",
+    "should": "^3.3.1"
   }
 }
