--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "grunt-mocha-test": "^0.10.2",
     "lodash": "~2.4.1",
     "should": "^3.3.1"
+  },
+  "dependencies": {
+    "amdefine": ">=0.1.0"
   }
 }
