--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-mocha-test": "^0.10.2",
     "lodash": "~2.4.1",
-    "should": "^3.3.1"
-  },
-  "dependencies": {
-    "amdefine": ">=0.1.0"
+    "should": "^3.3.1",
+    "amdefine": "^0.1.0",
+    "selenium-webdriver": "^2.42.0"
   }
 }
