--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-mocha-test": "^0.10.2",
     "lodash": "~2.4.1",
-    "should": "^3.3.1",
-    "amdefine": "^0.1.0",
-    "selenium-webdriver": "^2.42.0"
+    "chai": "^1.9.1",
+    "chai-as-promised": "^4.1.1"
   }
 }
